# quality-runner

./: .gitignore  .pre-cr.json  .quality-runner.toml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RESEARCH_READY.md  SECURITY.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.tracker/: PROJECT_TRUTH.md
docs/: agent-usage.md  architecture-contracts.md  artifacts.md  case-study.md  cli.md  consumer-tooling.md  dogfood-report.md  fresh-review-prd.md  integration-boundaries.md  mcp.md  phase-contract.md  planning-contracts.md  qr-rollout-20260702.md  quality-skills.md  release.md  security-review-obligations.md  similarity.md  skill-ingest-agent.md  standards-profiles.md  threat-model.md  tier-one-quality-rubric-audit.md  troubleshooting.md  unwired-work.md  upgrade.md
quality_evidence_contract/: __init__.py  core.py
quality_runner/: __init__.py  __main__.py  actionability.py  adoption.py  agent_review_policy.py  aggregate_coverage.py  architecture_config_parse.py  artifact_config_parse.py  artifacts.py  audit.py  cache_modes.py  capabilities.py  capability_exceptions.py  capability_state.py  ci_status.py  cli.py  cli_artifacts.py  cli_controller_reports.py  cli_fix_proposals.py  cli_gate.py  cli_handoff.py  cli_human_summary.py  cli_journeys.py  cli_outcome.py  cli_payload.py  cli_phase.py  cli_planning.py  cli_refresh.py  cli_remediation.py  cli_review.py  cli_rollout.py  cli_skills.py  cli_status.py  cli_update.py  cli_workflow_args.py  code_quality.py  code_quality_api_rules.py  code_quality_architecture.py  code_quality_bundles.py  code_quality_duplicates.py  (+159 more)
repo_quality_certifier/: __init__.py  __main__.py  cli.py  core.py  mcp.py
scripts/: check_environment_contract.py  quality-runner  run_pytest_with_lcov.py  write_pre_cr_lcov.py
test_support/: quality_runner_fixtures.py  security_scan.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_cli_artifacts.py  test_cli_journeys.py  test_cli_update.py  test_code_quality.py  test_code_quality_architecture.py  test_code_quality_similarity.py  test_code_quality_unwired.py  test_compatibility_boundaries.py  test_config.py  test_controller_reports.py  test_corpus.py  test_delivery_contract_surfaces.py  test_discovery_artifact_exclusions.py  test_discovery_standards_capabilities.py  test_entrypoints.py  test_environment_contract.py  test_environment_legibility_candidate.py  test_evidence_excerpts.py  test_exclusion_preflight.py  test_findings.py  test_fix_proposals.py  test_fresh_review_execution.py  test_gate_controller.py  test_gate_package_manager.py  test_gate_verification_schema.py  test_handoff_markdown.py  test_incremental_analysis.py  test_journey_outcomes.py  test_lcov_script.py  test_mcp.py  test_module_status.py  test_outcome_contracts.py  test_outcome_projection.py  test_performance_and_delivery.py  test_performance_benchmarks.py  test_phase1_semantics.py  (+55 more)
(+175 files in other folders)
