[project]
name = "quality-runner"
version = "0.1.0"
description = "Standalone audit-and-plan quality orchestrator with CLI and MCP surfaces."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
quality-runner = "quality_runner.cli:main"
quality-runner-mcp = "quality_runner.mcp:main"

[tool.setuptools.package-data]
quality_runner = ["plugin/*.json", "plugin/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["quality_runner", "tests"]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
