[project]
name = "quality-runner"
version = "0.3.1"
description = "Standalone audit-and-plan quality orchestrator with CLI and MCP surfaces."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jakye Amos" }]
keywords = ["quality", "audit", "mcp", "cli", "repository-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/jakyeamos/quality-runner"
Repository = "https://github.com/jakyeamos/quality-runner"
Issues = "https://github.com/jakyeamos/quality-runner/issues"
Changelog = "https://github.com/jakyeamos/quality-runner/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
quality-runner = "quality_runner.cli:main"
quality-runner-mcp = "quality_runner.mcp:main"
repo-quality-certifier = "repo_quality_certifier.cli:main"
repo-quality-certifier-mcp = "repo_quality_certifier.mcp:main"

[tool.setuptools.package-data]
quality_runner = ["plugin/*.json", "plugin/*.md", "schemas/*.json"]
repo_quality_certifier = ["plugin/*.json", "plugin/*.md"]

[tool.setuptools.packages.find]
include = ["quality_runner*", "quality_evidence_contract*", "repo_quality_certifier*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["quality_runner", "quality_evidence_contract", "repo_quality_certifier"]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
